# juxtorpus

./: .gitignore  README.md  binder_poetry_to_requirements.sh  init.dev.sh  init_env.dev.sh  init_topsbm_env.dev.sh  jupyter_notebook_config.py  pyproject.toml  requirements-notebook.txt  requirements.txt  sbm-test.ipynb  test_topsbm.py
atap_widgets/: concordance.py
juxtorpus/: __init__.py  exceptions.py  jux.py
juxtorpus/analyse/: __init__.py  quotation.py  sem_tagger.py  sentiment.py  topic_model.py
juxtorpus/checks/: __init__.py  encoding.py  size.py
juxtorpus/corpus/: __init__.py  builder.py  corpora.py  corpus.py  dtm.py  freqtable.py  operation.py  slicer.py  viz.py
juxtorpus/corpus/meta/: series.py  spacy_doc.py
juxtorpus/corpus/processors/: __init__.py  spacy_processor.py
juxtorpus/corpus/processors/components/: hashtags.py  mentions.py  sentiment.py
juxtorpus/features/: polarity.py  similarity.py
juxtorpus/matchers/: ling.py
juxtorpus/stats/: stats.py
juxtorpus/tm/: __init__.py  topsbm.py
juxtorpus/utils/: deduplicated_dir.py  utils_formats.py
juxtorpus/viz/: corpus.py  item_timeline.py  polarity_wordcloud.py
juxtorpus/viz/style/: ipyw.py
juxtorpus/viz/widgets/: corpus_download.py  file_uploader.py
juxtorpus/viz/widgets/corpus/: builder.py  corpora.py  operations.py  slicer.py
notebooks/: farms_to_freeways.ipynb  slicer.ipynb  tm-topsbm.ipynb
notebooks/demos/: Concordance-nb.ipynb
notebooks/demos/P&I_Conf_Demo/: PIConf.ipynb  PIConf.py  privacy_lite.xlsx
notebooks/demos/anzca-2023/: anzca-2023.ipynb
notebooks/demos/arrnet_showcase/: Demo-AARNet.ipynb
notebooks/demos/taster_workshop/: Juxtorpus-Taster-Webinar.ipynb  Taster-Corpus.ipynb  news.xlsx  twcs_proc.ipynb
notebooks/tristram/: similarity.ipynb
notebooks/workshops/: 1-corpus.ipynb  2-corpora.ipynb  3-slicing.ipynb  4-jux.ipynb  5-concordance.ipynb  6-quotation_tool.ipynb  analyse.ipynb  dataset.ipynb
scripts/dependencies/: install_graphtool.sh
tests/: test_corpus.py  test_deduplicated_dir.py  test_pymusas.py  test_slicer.py
tests/assets/: test.csv
tests/tm/: __init__.py  topsbm.py
