[tool.poetry]
name = "juxtorpus"
version = "0.2.1"
description = "Juxtorpus is a corpus exploration tool used to compare and contrast corpus. Widgets enabled."
authors = ["jack <huen.chan@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.2"
pyarrow = "^9.0.0"      # pandas memory efficient dep for str
frozendict = "^2.3.4"
openpyxl = "^3.1.1"
# spacy
spacy = "^v3.4.1"
thinc-apple-ops = { extras = ["apple"], version = "^0.1.0", platform = "apple" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl" }
# ipywidget
ipywidgets = "^7.7.2"    # 8.x.x latest - backwards compatibility kept for FileUpload widget
# algos
#rake-nltk = "^1.0.6"
# file checkers
chardet = "^5.0.0"
# loggers
colorlog = "^6.7.0"

# ml
transformers = "^4.23.1"
scipy = "^1.9.3"
#torch = "^1.12.1"
scikit-learn = "^1.1.1"

# viz
matplotlib = "^3.5.2"
tqdm = "^4.64.0"
plotly = "^5.11.0"
wordcloud = "^1.8.2.2"
pyldavis = "^3.4.0"   # from 3.4.1 onwards - requires pandas >= 2.0

# misc
coolname = "^2.2.0"

# atap
#atap-widgets = { version = "^0.3.0", python = ">=3.8,<3.11" }

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6"
#jupyterlab-vim = "^0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
