[tool.poetry]
name = "juxtorpus"
version = "0.2.1"
description = "Juxtorpus (ATAP Tools) standardises a sliceable Corpus that's extendable and widgetised."
authors = ["Jack <huen.chan@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.2"
pyarrow = "^9.0.0"      # pandas memory efficient dep for str
openpyxl = "^3.1.1"
spacy = "^v3.4.1"
chardet = "^5.0.0"  # checks - 56kB
colorlog = "^6.7.0"
scipy = "^1.9.3"
tqdm = "^4.64.0"
coolname = "^2.2.0"
scikit-learn = "^1.1.1"         # todo: to be removed much later after reimplements DTM initialise function.

[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.5.2"
ipywidgets = "^7.7.2"    # 8.x.x latest - backwards compatibility kept for FileUpload widget
plotly = "^5.11.0"
panel = "^1.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6"
jupyterlab-vim = "^0.15"
jupyterlab-git = "^0.41.0"
pyldavis = "^3.4.0"   # from 3.4.1 onwards - requires pandas >= 2.0     # todo: to be removed.
wordcloud = "^1.8.2.2"      # todo: to be removed.


[tool.poetry.group.macOS]
optional = true

[tool.poetry.group.macOS.dependencies]
thinc-apple-ops = { extras = ["apple"], version = "^0.1.0", platform = "apple" }
urllib3 = "^1.26.6"     # ImportError: urllib3 v2.0 only supports OpenSSL 1.1.1+ (Mac ARM architecture)


[tool.poetry.extras]
viz = ["panel", "matplotlib", "ipywidgets", "plotly"]
# specifying extras via dependency groups - currently an Open Issue: https://github.com/python-poetry/poetry/issues/4842


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"